--- a/index.html
+++ b/index.html
@@ -1,43 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" value="" >
 
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta charset="utf-8" value="" >
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" value="" >
 	<title>Calculator</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="style.css" value="" >
 </head>
 
 <body>
-	<script src="script.js"></script>
-	<div id="calculator">
-		<div id="display">
-			<p id="reslut"></p>
+	<script src="script.js" value="" ></script>
+	<div id="calculator" value="" >
+		<div id="display" value="" >
+			<p id="reslut" value="" ></p>
 		</div>
-		<div id="buttons">
-			<button onclick="calc('%')">&percnt;</button>
-			<button onclick="calc('root')">&radic;</button>
-			<button onclick="calc('square')">x&sup2;</button>
-			<button onclick="calc('log')">1/&#8339;</button>
-			<button onclick="calc(7)">7</button>
-			<button onclick="calc(8)">8</button>
-			<button onclick="calc(9)">9</button>
-			<button onclick="calc('/')">&divide;</button>
-			<button onclick="calc(4)">4</button>
-			<button onclick="calc(5)">5</button>
-			<button onclick="calc(6)">6</button>
-			<button onclick="calc('x')">&times;</button>
-			<button onclick="calc(1)">1</button>
-			<button onclick="calc(2)">2</button>
-			<button onclick="calc(3)">3</button>
-			<button onclick="calc('+')">&plus;</button>
-			<button onclick="calc('+-')">&plusmn;</button>
-			<button onclick="calc(0)">0</button>
-			<button onclick="calc('.')">.</button>
-			<button onclick="calc('-')">&minus;</button>
-			<button onclick="clear()">Cls</button>
-			<button onclick="calc('b')">Back</button>
-			<button onclick="calc('=')" id="equals">&equals;</button>
+		<div id="buttons" value="" >
+			<button onclick="calc(this)" value="%" value="" >&percnt;</button>
+			<button onclick="calc(this)" value="r" value="" >&radic;</button>
+			<button onclick="calc(this)" value="s" >x&sup2;</button>
+			<button onclick="calc(this)" value="l" >1/&#8339;</button>
+			<button onclick="calc(this)" value="7" >7</button>
+			<button onclick="calc(this)" value="8" >8</button>
+			<button onclick="calc(this)" value="9" >9</button>
+			<button onclick="calc(this)" value="/" >&divide;</button>
+			<button onclick="calc(this)" value="4" >4</button>
+			<button onclick="calc(this)" value="5" >5</button>
+			<button onclick="calc(this)" value="6" >6</button>
+			<button onclick="calc(this)" value="*" >&times;</button>
+			<button onclick="calc(this)" value="1" >1</button>
+			<button onclick="calc(this)" value="2" >2</button>
+			<button onclick="calc(this)" value="3" >3</button>
+			<button onclick="calc(this)" value="+" >&plus;</button>
+			<button onclick="calc(this)" value="!" >&plusmn;</button>
+			<button onclick="calc(this)" value="0" >0</button>
+			<button onclick="calc(this)" value="." >.</button>
+			<button onclick="calc(this)" value="-" >&minus;</button>
+			<button onclick="none()" value="" >Cls</button>
+			<button onclick="calc(this)" value="back" >Back</button>
+			<button onclick="calc(this)" id="equals" value="=" >&equals;</button>
 		</div>
 	</div>
 </body>
