--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 	<div id="calculator">
 		<div id="display">
 			<p id="temporary">1</p>
-			<p id="result">88</p>
+			<p id="result">0</p>
 		</div>
 		<div id="buttons">
 			<button class="operations" value="%">&percnt;</button>
 			<button class="operations" value="r">&radic;</button>
-			<button class="operations" value="sq">x&sup2;</button>
+			<button class="operations" value="sq">X<sup>Y</sup></button>
 			<button class="operations" value="log">1/&#8339;</button>
 			<button class="numbers">7</button>
 			<button class="numbers">8</button>
@@ -36,8 +36,8 @@
 			<button class="numbers">0</button>
 			<button class="operations special">.</button>
 			<button class="operations" value="-">&minus;</button>
-			<button>Cls</button>
-			<button>Back</button>
+			<button onclick="cls()">Cls</button>
+			<button onclick="correct()">Back</button>
 			<button class="operations special">&equals;</button>
 		</div>
 	</div>
