added plus minus button

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"  >
+<html lang="en">
 
 <head>
 	<meta charset="utf-8">
@@ -33,7 +33,7 @@
 			<button class="operations" value="+">&plus;</button>
 			<button class="special" value="-">&plusmn;</button>
 			<button class="numbers" value="0">0</button>
-			<button id="dot" class="special" onclick="point()">.</button>
+			<button class="numbers" value=".">.</button>
 			<button class="operations" value="-">&minus;</button>
 			<button onclick="cls()">Cls</button>
 			<button onclick="correct()">Back</button>
