floating point added

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 			<button class="operations" value="+">&plus;</button>
 			<button class="special" value="-">&plusmn;</button>
 			<button class="numbers" value="0">0</button>
-			<button class="numbers" value=".">.</button>
+			<button class="special" value=".">.</button>
 			<button class="operations" value="-">&minus;</button>
 			<button onclick="cls()">Cls</button>
 			<button onclick="correct()">Back</button>
-			<button class="operations special">&equals;</button>
+			<button class="operations" value="=">&equals;</button>
 			<button class="help">&#63;</button>
 		</div>
 	</div>
