--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			<button class="operations" value="-">&minus;</button>
 			<button onclick="cls()">Cls</button>
 			<button onclick="correct()">Back</button>
-			<button class="operations" value="=">&equals;</button>
+			<button class="special" value="=">&equals;</button>
 			<button class="help" onclick="help()">&#63;</button>
 		</div>
 	</div>
