--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 			<button class="numbers" value="0">0</button>
 			<button class="special" value=".">.</button>
 			<button class="operations" value="-">&minus;</button>
-			<button onclick="cls()">Cls</button>
-			<button onclick="correct()">Back</button>
+			<button class="ops" onclick="cls()">Cls</button>
+			<button class="ops" onclick="correct()">Back</button>
 			<button class="special" value="=">&equals;</button>
 			<button class="help" onclick="help()">&#63;</button>
 		</div>
