--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Calculator</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -56,7 +56,7 @@
 			<button class="help" onclick="help()">&#63;</button>
 		</div>
 	</div>
-	<script src="script.js"></script>
+	<script src="./script.js"></script>
 </body>
 
 </html>
